Migrate from Codex CLI to OpenCode CLI
- Update CLI command references from `codex` to `opencode`
- Update configuration paths to `.takopi` and `.config/takopi`
- Adapt event handling for OpenCode JSON output format
- Update tests to match new class names and behaviors
- Update package description in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "takopi"
 authors = [{name = "banteg"}]
 version = "0.1.0"
-description = "Run OpenAI Codex CLI with Telegram as the human-in-the-loop interface."
+description = "Run OpenCode CLI with Telegram as the human-in-the-loop interface."
 readme = "readme.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.12"
